tests/samples/positive/types/cast_bool_nonzero.ax
module cast_bool_nonzero;

const CONST_FROM_INT: bool = ((2) as bool);
const CONST_FROM_ZERO: bool = ((0) as bool);

fn main() -> i32 {
    let runtime_from_int: bool = ((2) as bool);
    let runtime_from_negative: bool = ((-1) as bool);
    let runtime_from_zero: bool = ((0) as bool);
    let runtime_from_float: bool = ((((2) as f64)) as bool);
    let runtime_from_float_zero: bool = ((((0) as f64)) as bool);
    if !CONST_FROM_INT {
        return 1;
    }
    if CONST_FROM_ZERO {
        return 2;
    }
    if !runtime_from_int {
        return 3;
    }
    if !runtime_from_negative {
        return 4;
    }
    if runtime_from_zero {
        return 5;
    }
    if !runtime_from_float {
        return 6;
    }
    if runtime_from_float_zero {
        return 7;
    }
    return 0;
}
