tests/samples/negative/types/duplicate_value_definition.ax
module duplicate_value_definition;

const answer: i32 = 1;
const answer: i32 = 2;

fn main() -> i32 {
    return answer;
}
